# BankManagementSystem

./: BankSystem.cpp  BankSystem.h  CMakeLists.txt  Customer.cpp  Customer.h  Manger.cpp  Manger.h  Teller.cpp  Teller.h  User.cpp  User.h  main.cpp
BankSystem/: Customers.txt  Manger.txt
CustomerRecords/: hatim.txt  yohana.txt
